--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,73 @@
 absl-py==2.1.0
 altair==5.5.0
+astunparse==1.6.3
+attrs==25.1.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+filelock==3.17.0
+flatbuffers==25.2.10
+fonttools==4.56.0
+gast==0.6.0
 gdown==5.2.0
+gitdb==4.0.12
 GitPython==3.1.44
-keras==2.15.0
-numpy==1.24.4
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.13.0
+idna==3.10
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+mdurl==0.1.2
+narwhals==1.27.1
+numpy==1.26.4  # Updated for compatibility
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
-protobuf==3.20.3
-streamlit==1.42.1
-tensorflow-cpu==2.15.0
-tqdm==4.67.1
+protobuf==5.29.3
+pyarrow==19.0.1
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+referencing==0.36.2
 requests==2.32.3
-matplotlib==3.7.5
-
-
+rich==13.9.4
+rpds-py==0.22.3
+setuptools==75.8.0
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.6
+streamlit==1.42.1
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+termcolor==2.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
